--- a/index.html
+++ b/index.html
@@ -1,13 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GYM Website</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>GYM Website</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+        <nav>
+            <div class="menu-container">
+                <div class="company-logo">
+                    <h1>Fitness Power...</h1>
+                </div>
+                <div class="menu-item">
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Service</li>
+                    <li>Contact</li>
+                </div>
+            </div>
+        </nav>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+    </body>
+
 </html>
