--- a/index.html
+++ b/index.html
@@ -37,6 +37,356 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-container">
+                <div class="banner-left">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h1>A Reason of Your Health Join Today</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, nostrum. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Quibusdam, nostrum.</p>
+                    <button>Learn More..</button>
+                </div>
+                <div class="banner-img">
+                    <img src="./images/home-bg.png" alt="">
+                </div>
+            </div>
+        </section>
     </body>
 
 </html>
